trying to stop scroll on mobile of about section

--- a/my-app/src/components/About/about.css
+++ b/my-app/src/components/About/about.css
@@ -11,6 +11,7 @@
     aspect-ratio: 900/450;
     width: 100vw;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 .inner-content {
     padding-top: 15em;
